# mlops-examples

./: .gitignore  .gitmodules
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  modelBuilder.cpp
cpp/src/domain/avx/: avx_math.cpp  avx_math.h
cpp/src/domain/data_generation/: data_generator.h  mandelbrot_generator.cpp  mandelbrot_generator.h  mandelbrot_generator_avx.cpp  mandelbrot_generator_avx.h
cpp/test/: CMakeLists.txt
cpp/test/domain/avx/: test_avx_math.cpp
cpp/test/domain/data_generation/: test_avx_mandelbrot_generator.cpp  test_data_generator.cpp  test_mandelbrot_generator.cpp
data/: download_data.sh
python/: requirements.txt  serve_onnx.py  serve_pickle.py  serve_pmml.py
python/mlops_examples/domain/: input_dto.py  model.py  onnx_model.py  pmml_model.py  sklearn_model.py
python/mlops_examples/domain/data_generation/: data_generator.py  mandelbrot_generator.py
python/mlops_examples/domain/model_wrappers/: model_wrapper.py  onnx_model_wrapper.py  pmml_model_wrapper.py  sklearn_model_wrapper.py
python/mlops_examples/domain/numpy_forest/: decision_node.py  numpy_forest.py
python/mlops_examples/domain/transformers/: onnx_transformer.py
python/mlops_examples/infrastructure/: dataset_repository.py  model_repository.py  onnx_repository.py  pickle_repository.py  pmml_repository.py
python/mlops_examples/infrastructure/models/: model_repository.py  onnx_repository.py  pickle_repository.py  pmml_repository.py
python/scripts/: generate_data.py  generate_model_custom.py  generate_model_sklearn.py
python/tests/fixtures/: timer.py
python/tests/unit/domain/: test_numpy_forest.py
python/tests/unit/domain/data_generation/: test_mandelbrot_generator.py
